--- a/src/assets/styles.scss
+++ b/src/assets/styles.scss
@@ -1,1 +1,10 @@
+@charset "utf-8";
+@import url('https://fonts.googleapis.com/css?family=Noto+Sans&display=swap');
+
+$family-primary: 'Noto Sans', sans-serif;
+
 @import '../../node_modules/bulma/bulma.sass';
+
+html {
+  scroll-behavior: smooth;
+}
